force-app/main/default/objects/ilms__Chapter__c/ilms__Chapter__c.object-meta.xml
<CustomObject>
    <label>Chapter</label>
    <nameField>
        <displayFormat>Chapter - {00000}</displayFormat>
        <label>Chapter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chapters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>