force-app/main/default/objects/ilms__Chapter__c/fields/ilms__Book__c.field-meta.xml
<CustomField>
    <fullName>ilms__Book__c</fullName>
    <label>Book</label>
    <referenceTo>ilms__Book__c</referenceTo>
    <relationshipLabel>Chapters</relationshipLabel>
    <relationshipName>Chapters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>