force-app/main/default/objects/ilms__Chapter__c/fields/ilms__Chapter_Name__c.field-meta.xml
<CustomField>
    <fullName>ilms__Chapter_Name__c</fullName>
    <label>Chapter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>