force-app/main/default/objects/ilms__Chapter__c/fields/ilms__Pages_Count__c.field-meta.xml
<CustomField>
    <fullName>ilms__Pages_Count__c</fullName>
    <label>Number of Pages</label>
    <summaryForeignKey>ilms__Page__c.ilms__Chapter__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>