force-app/main/default/objects/ilms__Chapter__c/fields/ilms__Questions_Count__c.field-meta.xml
<CustomField>
    <fullName>ilms__Questions_Count__c</fullName>
    <label>Number of Questions</label>
    <summarizedField>ilms__Page__c.ilms__Questions_Count__c</summarizedField>
    <summaryForeignKey>ilms__Page__c.ilms__Chapter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>