force-app/main/default/objects/ilms__Chapter__c/fields/ilms__Quizzes_Count__c.field-meta.xml
<CustomField>
    <fullName>ilms__Quizzes_Count__c</fullName>
    <label>Number of Quizzes</label>
    <summaryFilterItems>
        <field>ilms__Page__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Quiz</value>
    </summaryFilterItems>
    <summaryForeignKey>ilms__Page__c.ilms__Chapter__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>