force-app/main/default/objects/ilms__Chapter__c/fields/ilms__Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>ilms__Total_Duration__c</fullName>
    <label>Total Duration</label>
    <summarizedField>ilms__Page__c.ilms__Duration__c</summarizedField>
    <summaryForeignKey>ilms__Page__c.ilms__Chapter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>